@@ -3,9 +3,10 @@ X3 ChangeLog
 
 2009-01-23  Alex Schumann  <rubin@afternet.org>
 
-	* src/mod-python.c: refactor to use class-based hook manager
+	* src/mod-python.c: refactor to use class-based hook manager. Seems to
+	run now.
 
-	* src/modpython.py: refactored into classes
+	* src/modpython.py: refactored into classes. Seems to run now.
 
 2008-01-12  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
